crates/banshee_parser/src/grammar/snapshots/banshee_parser__grammar__jsonpath__tests__last_index.snap
---
source: crates/banshee_parser/src/grammar/jsonpath.rs
expression: "format_tree(\"$[last]\")"
---
JSONPATH_LITERAL
  JP_ROOT
    JP_DOLLAR Some("$")
  JP_ARRAY_ACCESS
    JP_L_BRACKET Some("[")
    JP_LAST_KW Some("last")
    JP_R_BRACKET Some("]")
