crates/banshee_parser/src/grammar/snapshots/banshee_parser__grammar__jsonpath__tests__recursive.snap
---
source: crates/banshee_parser/src/grammar/jsonpath.rs
expression: "format_tree(\"$..name\")"
---
JSONPATH_LITERAL
  JP_ROOT
    JP_DOLLAR Some("$")
  JP_RECURSIVE_DESCENT
    JP_DOTDOT Some("..")
    JP_KEY
      JP_IDENT Some("name")
